#123: add filters to respondents (#65)
* add filters to respondent

* fix tests

* refactor query to find RespondentToGroup by identityUserId instead of respondentData.id

* refactor admin password to be loaded from environment variable

* refactor tests to support admin password loading mechanism

* refactor getAll method for improved readability

* change option content mapping to option ID in mapQuestionsAndOptions

---------

Co-authored-by: Wiktoria Grzesik <wikgrz12@st.amu.edu.pl>